[package]
name = "leaky-bucket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
redis = "0.29.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
